--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 markdown: kramdown
 permalink: pretty
-pygments: true
 
 timezone: UTC
 
@@ -18,7 +17,7 @@ exclude:
   - redirect.conf_
   - vendor
 
-url: https://rigovanov.ru
+url: "https://rigovanov.ru"
 baseurl: "/eltrans"
 
 locales:
